--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h2 class="headerLabel"><i class="fa-solid fa-user"></i> Profile summary</h2>
                 <hr class="hr2" />
                 <!-- <ul>
-                    <li>A result-oriented professional with over 4+ years of experience in Sofware Engineering,
+                    <li>A result-oriented professional with over 5 years of experience in Sofware Engineering,
                         specializing in
                         Front-end Development</li>
 
