experience updated in profile summary

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         situations and
                         flexible to work collaboratively in a team and create an inclusive environment </li>
                 </ul> -->
-                <p>Results-driven Frontend Developer with 4+ years of experience building scalable, responsive web applications. Expertise in React.js, JavaScript, TypeScript, and modern frontend frameworks. Proven track record of delivering high-impact features, improving user experience, and optimizing performance in Agile environments. Experienced with AI-assisted development using GitHub Copilot and AI agents for accelerating coding workflows, generating test cases, reviewing code, and scaffolding reusable components. Currently expanding into full-stack development by learning Python and Django to complement frontend expertise.
+                <p>Results-driven Frontend Developer with over 5 years of experience building scalable, responsive web applications. Expertise in React.js, JavaScript, TypeScript, and modern frontend frameworks. Proven track record of delivering high-impact features, improving user experience, and optimizing performance in Agile environments. Experienced with AI-assisted development using GitHub Copilot and AI agents for accelerating coding workflows, generating test cases, reviewing code, and scaffolding reusable components. Currently expanding into full-stack development by learning Python and Django to complement frontend expertise.
                 </p>
             </div>
             <div class="workExperience">
